# Engine

./: .gitmodules  CMakeLists.txt  build.sh
include/core/access/: NVMStorageManager.h  RootManager.h  root.h
include/core/index/: HashMapIndex.hpp  HashMethod.h  IndexDef.h  KeyValueIndex.hpp  MultiValTreeIndex.hpp  NodeBucketList.h  PHashMap.hpp  SHashMapIndex.hpp  SkipListIndex.hpp  TreeDef.h  UniqueTreeIndex.hpp  VHashMap.hpp  VHashMapIndex.hpp  VNodeBucketList.h  VSkipListIndex.hpp  VSkiplist.hpp  VolatileBPTree.hpp  VolatileTreeIndex.hpp  index_gen.h
include/core/memory/: constants.h
include/core/memory/management/: general_mm.h
include/core/operators/: operators.h  operators_ds.h
include/core/operators/general_vectorized/: between_compr.h  select_compr.h
include/core/operators/interfaces/: between.h
include/core/operators/scalar/: agg_sum_uncompr.h  join_uncompr.h  select_uncompr.h
include/core/queryprocessing/: AccessPathManager.h  Query.h  QueryBookkeeper.h
include/core/replication/: ReplicationManager.h
include/core/storage/: PersistentColumn.h  VolatileColumn.h  column.h  column_gen.h  column_gen_add.h  column_helper.h
include/core/tracing/: trace.h
include/core/utils/: config.h.in  logger.h  measure.h
src/examples/: CMakeLists.txt
src/microbenchmarks/: CMakeLists.txt  ds_join_bench.cc  ds_sel_properties.cc  numa_effects.cpp  numa_test.cpp  nvmds_advisor.cc  nvmds_advisor_double.cc  nvmds_bench.cc  nvmds_doubleselect.cc  nvmds_join.cc  nvmds_parallel_select.cc  nvmds_selectivity.cc
test/: CMakeLists.txt
test/core/index/: CMakeLists.txt  GenerationTest.cpp  NodeBucketListTest.cpp  PHashMapTest.cpp  SkipListIndexTest.cpp  VHashMapTest.cpp  VolatileBPTreeTest.cpp
test/core/replication/: CMakeLists.txt  ReplicationManagerTest.cpp
